--- a/index.html
+++ b/index.html
@@ -3,40 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Website</title>
+    <title>Memory Game</title>
     <style>
-      /* Add your CSS styles here */
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f0f0f0;
+      #grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr); /* 4 columns */
+        grid-template-rows: repeat(4, 1fr); /* 4 rows */
+        gap: 5px;
+        width: 520px; /* Adjusted width to accommodate grid gap and borders */
+        height: 520px; /* Adjusted height to accommodate grid gap and borders */
+        overflow: auto; /* Enable scrolling if grid exceeds container */
       }
-
-      header {
-        background-color: #333;
+      .grid-cell {
+        width: 100%;
+        height: 100%;
+        background-color: #ddd;
+      }
+      /* Style the Go Back button */
+      button {
+        display: inline-block;
+        background-color: #6bafe4;
         color: #fff;
+        border: none;
         padding: 10px 20px;
-        text-align: center;
+        font-size: 18px;
+        margin: 5px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
       }
-
-      /* Add more styles as needed */
+      button:hover {
+        background-color: #6255e8;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      body {
+        background-image: url("memory.png");
+        background-size: 100% 100%; /* Stretch the background image to cover the entire background */
+        height: 100vh; /* Make the background cover the entire viewport height */
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        background-position: center;
+        background-repeat: no-repeat;
+        color: white; /* Set the text color to white */
+      }
+      body {
+        background-color: black;
+        /* Other styles */
+      }
     </style>
   </head>
-  <body>
-    <header>
-      <h1>Welcome to My Website</h1>
-    </header>
+  <body style="background-color: black">
+    <!-- Game Header -->
+    <h1>Brain Food</h1>
+    <!-- Game Statistics -->
+    <h2>Attempt# <span id="tries"></span></h2>
+    <h2>Correct choices: <span id="score"></span>/8</h2>
+    <!-- Grid for Memory Cards -->
+    <div id="grid"></div>
+    <!-- "Go Back" link button -->
+    <a href="mainPage"><button>Go Back</button></a>
+    <!-- Restart Game Button -->
+    <button onclick="restartGame()">Restart Game</button>
 
-    <div class="content">
-      <p>
-        This is a basic HTML template. You can start building your website
-        content here.
-      </p>
-    </div>
-
-    <footer>
-      <p>&copy; 2024 My Website</p>
-    </footer>
+    <!-- JavaScript Logic -->
+    <script>
+      // JavaScript code goes here
+    </script>
   </body>
 </html>
