--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <title>Memory Game</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body style="background-color: black">
-    <!-- Game Header -->
-    <h1>Brain Food</h1>
-    <!-- Game Statistics -->
-    <h2>Attempt# <span id="tries"></span></h2>
-    <h2>Correct choices: <span id="score"></span>/8</h2>
+
+  <body>
+    <div id="text-content">
+      <h1>Brain Food</h1>
+      <h2>Attempt# <span id="tries"></span></h2>
+      <h2>Correct choices: <span id="score"></span>/8</h2>
+      <button onclick="restartGame()">Restart Game</button>
+    </div>
+
     <!-- Grid for Memory Cards -->
     <div id="grid"></div>
-    <!-- "Go Back" link button -->
-    <a href="mainPage"><button>Go Back</button></a>
-    <!-- Restart Game Button -->
-    <button onclick="restartGame()">Restart Game</button>
 
     <!-- JavaScript file link -->
     <script src="scripts.js"></script>
